app/assets/stylesheets/base.css
html {
  webkit-box-sizing: none;
  -moz-box-sizing: none;
  box-sizing: none;
}

#all h1, h2, h3, h4, h5, h6, td h3 {
  color: #434;
  background: #DADED9;
  font-family: 'Francois One', sans-serif;
  padding: 5px;
}

#all {
  font-family: 'Open Sans', sans-serif;
  color: #121212;
  width: 100%;
  padding: 0;
  margin: 0 auto;
  background-color: #FAFAFA;
}



.placeholder {
  margin: 0 auto;
  background-color: #399FA8;
  color: #FCFDFC;
  text-align: center;
  line-height: 2em;
  height: 400px;
  font-size: 2.8em;
  top: 0;
  overflow: hidden;
}

.work-img {
  width: 100%;
  overflow: hidden;
  opacity: 0.8;
}

.work-img:hover {
  opacity: 1;
}

.btn-custom {
  background-color: hsl(187, 49%, 43%) !important;
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3da4b2", endColorstr="#3796a3");
  background-image: -khtml-gradient(linear, left top, left bottom, from(#3da4b2), to(#3796a3));
  background-image: -moz-linear-gradient(top, #3da4b2, #3796a3);
  background-image: -ms-linear-gradient(top, #3da4b2, #3796a3);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3da4b2), color-stop(100%, #3796a3));
  background-image: -webkit-linear-gradient(top, #3da4b2, #3796a3);
  background-image: -o-linear-gradient(top, #3da4b2, #3796a3);
  background-image: linear-gradient(#3da4b2, #3796a3);
  border-color: #3796a3 #3796a3 hsl(187, 49%, 42%);
  color: #fff !important;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.06);
  -webkit-font-smoothing: antialiased;
}

.btn-custom:hover {
  background-color: hsl(187, 49%, 28%) !important;
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#297079", endColorstr="#24626a");
  background-image: -khtml-gradient(linear, left top, left bottom, from(#297079), to(#24626a));
  background-image: -moz-linear-gradient(top, #297079, #24626a);
  background-image: -ms-linear-gradient(top, #297079, #24626a);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #297079), color-stop(100%, #24626a));
  background-image: -webkit-linear-gradient(top, #297079, #24626a);
  background-image: -o-linear-gradient(top, #297079, #24626a);
  background-image: linear-gradient(#297079, #24626a);
  border-color: #24626a #24626a hsl(187, 49%, 27%);
  color: #fff !important;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.06);
  -webkit-font-smoothing: antialiased;
}

.icon-img {
  height: 30px;
  opacity: 0.8;
}

.icon-img:hover{
  opacity: 1;
}

#jnav {
  margin-top: 10px;
  font-size: 1.7em;
}

#jnav a.navbar-brand {
  font-size: 1.7em;
  letter-spacing: 1.5px;
  color: #40B5B1;
  font-family: 'Hammersmith One', cursive;
  line-height: 1em;
/*  margin-left: 20px;*/
}

#jnav a.navbar-brand:hover {
  color: #FF6192;
}

#jnav .navbar-fixed-top {
  padding-left: 10.975%;
}

#jnav .navbar-left {
  padding-left: 40px;
  line-height: 1em;
}

#jnav .navbar-left li a {
  padding: 25px;
  margin: 0 10px;
  letter-spacing: 2px;
  font-family: 'Francois One', sans-serif;
}

#jnav .navbar-right {
  margin-top: 7px;
  display: inline-block;
}

#jnav .navbar a.blue-hover:hover {
  color: #00717D;
}

#jnav .navbar li.active a {
  color: #00717D;
}
#jnav .navbar li.active a:hover {
  color: #00717D;
}

.big-margin {
  margin-top: 9%;
}

#all a {
  color: #40B5B1;
  text-decoration: none;
}

#all a:hover {
  color: #2A8188;
}

section {
/*  padding: 3%;*/
  background-color: #FAFAFA;
/*  margin: 2%;*/
}

p {
  padding: 2%;
}

#about, #work {
  font-size: 1.35em;
}

#contact {
  font-size: 1.7em;
}

#contact p {
  padding-bottom: 30%;
}

.img-responsive {
text-align: right;
display: inline-block;
}

.transp {
  opacity: .9;
}

table tr td {
  border-top: 0;
  border: none;
  border-color: transparent !important;
}

footer {
/*  padding: 20px;
  margin-top: 15px;
  background-color: #00717D;
  height: 200px;
  color: #FFF5FC;
  letter-spacing: 1px;*/
}

